# sharepoint-mcp

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  FIXES_APPLIED.md  LICENSE  Makefile  README.md  SECURITY.md  config.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  server.json
.agents/skills/code-reviewer/: SKILL.md
.agents/skills/developer-elite/: SKILL.md
.agents/skills/developer-production/: SKILL.md
.agents/skills/minimal-code-writer/: SKILL.md
.agents/skills/test-writer/: SKILL.md
.agents/workflows/: branching-strategy.md
.antigravity/: config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: branch-naming.yml  ci.yml  publish-dockerhub.yaml  publish-ghcr.yml  publish-mcp.yml  publish-pypi.yml
docs/: VSCODE-SETUP.md  api-configuration.md  architecture.md  azure-setup.md  changelog.md  configuration.md  contributing.md  getting-started.md  index.md  roadmap.md  tools-reference.md
src/mcp_sharepoint/: __init__.py  exceptions.py  server.py
src/mcp_sharepoint/config/: settings.py
src/mcp_sharepoint/core/: __init__.py  client.py  client_graph_only.py  client_graphql.py  client_unified.py
src/mcp_sharepoint/models/: __init__.py  responses.py
src/mcp_sharepoint/services/: __init__.py  document_service.py  document_service_graph.py  document_service_office365.py  folder_service.py  folder_service_graph.py  folder_service_office365.py  metadata_service.py  metadata_service_graph.py  metadata_service_office365.py
src/mcp_sharepoint/tools/: __init__.py  document_tools.py  folder_tools.py  metadata_tools.py
src/mcp_sharepoint/utils/: __init__.py  parsers.py  retry.py
tests/: conftest.py  test_folder_service.py  test_graph_client.py  test_parsers.py  test_retry.py  test_server.py
tests/manual/: test_mcp_client.py
